crates/agent/src/integration_tests/graphql/queries/snapshots/agent__integration_tests__graphql__queries__bob-live_specs_collection_connections_reverse.snap
---
source: crates/agent/src/integration_tests/graphql/queries/mod.rs
expression: bob_result
---
{
  "liveSpecs": {
    "edges": [
      {
        "node": {
          "catalogName": "aliceCo/shared/c",
          "liveSpec": {
            "readBy": {
              "edges": [
                {
                  "cursor": "aliceCo/shared/materialize",
                  "node": {
                    "catalogName": "aliceCo/shared/materialize",
                    "userCapability": "read"
                  }
                }
              ],
              "pageInfo": {
                "hasNextPage": true,
                "hasPreviousPage": false
              }
            },
            "writtenBy": {
              "edges": [
                {
                  "cursor": "aliceCo/shared/capture",
                  "node": {
                    "catalogName": "aliceCo/shared/capture",
                    "userCapability": "read"
                  }
                }
              ],
              "pageInfo": {
                "hasNextPage": false,
                "hasPreviousPage": false
              }
            }
          },
          "userCapability": "read"
        }
      }
    ]
  }
}
