crates/agent/src/integration_tests/graphql/queries/snapshots/agent__integration_tests__graphql__queries__bob-prefixes.snap
---
source: crates/agent/src/integration_tests/graphql/queries/mod.rs
expression: bob_result
---
{
  "prefixes": {
    "edges": [
      {
        "cursor": "aliceCo/shared/",
        "node": {
          "prefix": "aliceCo/shared/",
          "userCapability": "read"
        }
      },
      {
        "cursor": "bobCo/",
        "node": {
          "prefix": "bobCo/",
          "userCapability": "admin"
        }
      },
      {
        "cursor": "ops/dp/public/",
        "node": {
          "prefix": "ops/dp/public/",
          "userCapability": "read"
        }
      }
    ]
  }
}
